# Limbo

./: .gitignore  .gitmodules  CMakeLists.txt  Darwin.mk  Include.mk  Makefile  Makefile.clang  Makefile.gcc  README  Readme.md  Unix.mk  index.html
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  Readme.md  index.html
docs/html/: Algorithms.html  AssertMsg_8h.html  AssertMsg_8h__dep__incl.map  AssertMsg_8h__dep__incl.md5  AssertMsg_8h__incl.map  AssertMsg_8h__incl.md5  AssertMsg_8h_source.html  BacktrackColoring_8h.html  BacktrackColoring_8h__dep__incl.map  BacktrackColoring_8h__dep__incl.md5  BacktrackColoring_8h__incl.map  BacktrackColoring_8h__incl.md5  BacktrackColoring_8h_source.html  Bibtex.html  BookshelfDataBase_8h.html  BookshelfDataBase_8h__dep__incl.map  BookshelfDataBase_8h__dep__incl.md5  BookshelfDataBase_8h__incl.map  BookshelfDataBase_8h__incl.md5  BookshelfDataBase_8h_source.html  BookshelfDriver_8h.html  BookshelfDriver_8h__dep__incl.map  BookshelfDriver_8h__dep__incl.md5  BookshelfDriver_8h__incl.map  BookshelfDriver_8h__incl.md5  BookshelfDriver_8h_source.html  BoostPolygonApi_8h.html  BoostPolygonApi_8h__dep__incl.map  BoostPolygonApi_8h__dep__incl.md5  BoostPolygonApi_8h__incl.map  BoostPolygonApi_8h__incl.md5  BoostPolygonApi_8h_source.html  ChromaticNumber_8h.html  ChromaticNumber_8h__dep__incl.map  ChromaticNumber_8h__dep__incl.md5  ChromaticNumber_8h__incl.map  ChromaticNumber_8h__incl.md5  ChromaticNumber_8h_source.html  Coloring_8h.html  Coloring_8h__dep__incl.map  (+3757 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7e.js  all_8.js  (+272 more)
docs/parsers/: Def.md
docs/solvers/: Solvers.md
limbo/: CMakeLists.txt  Makefile
limbo/algorithms/: .gitignore  CMakeLists.txt  GraphUtility.h  Makefile  MaxClique.h  MaxIndependentSet.h
limbo/algorithms/coloring/: BacktrackColoring.h  ChromaticNumber.h  Coloring.h  GraphSimplication.h  GraphSimplification.h  GreedyColoring.h  ILPColoring.h  ILPColoringLemonCbc.h  ILPColoringUpdated.h  LPColoring.h  LPColoringOld.h  MISColoring.h  Makefile  SDPColoringCsdp.h
limbo/algorithms/partition/: FM.h  FMMultiWay.h  Makefile
limbo/algorithms/placement/: GreedySearch.h
limbo/algorithms/test/: color_conflictgraph.dot  conflictgraph.dot  constractgraph.dot  graph_backtrack-100.gv  graph_ilp.lp  lpcoloring_test_graph.gv  test_ChromaticNumber.cpp  test_FM.cpp  test_GraphSimplification.cpp  test_ILPColoring  test_LPColoring.cpp  test_SDPColoring.cpp
limbo/bibtex/: CMakeLists.txt  Makefile  bibconvert.py
limbo/containers/: CMakeLists.txt  DisjointSet.h  FastMultiSet.h  Makefile
limbo/geometry/: .gitignore  CMakeLists.txt  Geometry.h  Makefile  Polygon2Rectangle.h  Polygon2RectangleVec.h
limbo/geometry/api/: BoostPolygonApi.h  GeoBoostPolygonApi.cpp  GeoBoostPolygonApi.h  bLibApi.h
limbo/geometry/test/: GeoBoostPolygonApi.cpp  p2r1.gp  test_blibapi.cpp  test_boostpolygonapi.cpp  test_p2r.cpp
limbo/io/: IO.h
limbo/makeutils/: CMakeLists.txt  FindAR.mk  FindBoost.mk  FindClang.mk  FindClangxx.mk  FindCompiler.mk  FindGcc.mk  FindGfortran.mk  FindGurobi.mk  FindGxx.mk  FindLemon.mk  FindZlib.mk  GCCVersion.mk  Makefile
limbo/math/: CMakeLists.txt  Makefile  Math.h
limbo/parsers/: CMakeLists.txt  Makefile
limbo/parsers/def/: .gitignore
limbo/parsers/ebeam/: .gitignore
limbo/parsers/gdf/: .gitignore
limbo/parsers/gdsii/: .gitignore
limbo/parsers/lef/: .gitignore
limbo/parsers/lp/: .gitignore
limbo/parsers/verilog/: .gitignore
limbo/preprocessor/: AssertMsg.h  CMakeLists.txt  Makefile  Msg.h  PrintMsg.h
limbo/programoptions/: CMakeLists.txt  ConversionHelpers.h  Makefile  ProgramOptions.cpp  ProgramOptions.h
limbo/programoptions/test/: test_ProgramOptions.cpp
limbo/solvers/: Auciton.h  Auciton.h.bk  CMakeLists.txt  DualMinCostFlow.cpp  DualMinCostFlow.h  Makefile  MinCostFlow.h  MinCostFlow.h.old  MultiKnapsackLagRelax.cpp  MultiKnapsackLagRelax.h  Numerical.h  Solvers.h
limbo/solvers/api/: CplexApi.h  CsdpEasySdpApi.h  GurobiApi.h  LPSolveApi.h
limbo/solvers/lpmcf/: .gitignore  EqualityConstrainedMinCostFlow.h  Lgf.h  LpDualMcf.h  Makefile
limbo/string/: .gitignore  CMakeLists.txt  Classification.h  Makefile  String.h  ToString.h
limbo/string/test/: a.out  test.cpp
test/: CMakeLists.txt  Makefile
test/algorithms/: .gitignore  CMakeLists.txt  Makefile  run.sh  test_ChromaticNumber.cpp  test_FM.cpp  test_GraphSimplification.cpp  test_ILPColoring.cpp  test_LPColoring.cpp  test_MISColoring.cpp  test_SDPColoring.cpp
test/algorithms/benchmarks/: graph_backtrack-34.gv
test/geometry/: CMakeLists.txt  Makefile  test_boostpolygonapi.cpp  test_p2r.cpp
test/parsers/: CMakeLists.txt  Makefile
test/parsers/bookshelf/: CMakeLists.txt  Makefile  test_bison.cpp
test/parsers/def/: .gitignore  CMakeLists.txt  Makefile  test_adapt.cpp  test_bison.cpp
test/parsers/ebeam/: CMakeLists.txt  Makefile  test_bison.cpp
test/parsers/gdf/: CMakeLists.txt  test_bison.cpp
test/parsers/gdsii/: .gitignore  CMakeLists.txt  Makefile  test_driver.cpp  test_gdsdb.cpp  test_reader.cpp  test_writer.cpp
test/parsers/lef/: .gitignore  CMakeLists.txt  Makefile  test_adapt.cpp
test/parsers/lp/: CMakeLists.txt  test_bison.cpp
test/programoptions/: .gitignore  CMakeLists.txt  Makefile  test_ProgramOptions  test_ProgramOptions.cpp  test_ProgramOptions_simple  test_ProgramOptions_simple.cpp
test/solvers/: .gitignore  CMakeLists.txt  Makefile  test_CplexAPI.cpp  test_CplexApi.cpp  test_DualMinCostFlow.cpp  test_GurobiApi.cpp  test_LPSolveApi.cpp  test_MinCostFlow.cpp  test_MinCostFlow.cpp.b  test_MultiKnapsackLagRelax.cpp  test_solvers.cpp
test/string/: .gitignore  CMakeLists.txt  Makefile  test_compare  test_string.cpp
(+223 files in other folders)
