cmake_minimum_required(VERSION 3.0.2)

add_subdirectory(thirdparty)
add_subdirectory(algorithms)
add_subdirectory(bibtex)
add_subdirectory(containers)
add_subdirectory(geometry)
add_subdirectory(makeutils)
add_subdirectory(math)
add_subdirectory(parsers)
add_subdirectory(preprocessor)
add_subdirectory(programoptions)
add_subdirectory(solvers)
add_subdirectory(string)
