
add_subdirectory(thirdparty)
if(ALGORITHMS)
  add_subdirectory(algorithms)
endif(ALGORITHMS)
add_subdirectory(bibtex)
add_subdirectory(containers)
if(GEOMETRY)
  add_subdirectory(geometry)
endif(GEOMETRY)
add_subdirectory(makeutils)
add_subdirectory(math)
if(PARSERS)
  add_subdirectory(parsers)
endif(PARSERS)
add_subdirectory(preprocessor)
if(PROGRAMOPTIONS)
  add_subdirectory(programoptions)
endif(PROGRAMOPTIONS)
if(SOLVERS)
  add_subdirectory(solvers)
endif(SOLVERS)
add_subdirectory(string)
