if(ALGORITHMS)
  add_subdirectory(algorithms)
endif(ALGORITHMS)
if(GEOMETRY)
  add_subdirectory(geometry)
endif(GEOMETRY)
if(PARSER)
  add_subdirectory(parsers)
endif(PARSER)
if(PROGRAMOPTIONS)
  add_subdirectory(programoptions)
endif(PROGRAMOPTIONS)
if(SOLVERS)
  add_subdirectory(solvers)
endif(SOLVERS)
add_subdirectory(string)
