if(ALGORITHMS)
  add_subdirectory(algorithms)
endif(ALGORITHMS)
if(GEOMETRY)
  add_subdirectory(geometry)
endif(GEOMETRY)
if(PARSERS)
  add_subdirectory(parsers)
endif(PARSERS)
if(PROGRAMOPTIONS)
  add_subdirectory(programoptions)
endif(PROGRAMOPTIONS)
if(SOLVERS)
  add_subdirectory(solvers)
endif(SOLVERS)
add_subdirectory(string)
