add_subdirectory(bookshelf/bison)
add_subdirectory(def/bison)
add_subdirectory(def/adapt)
add_subdirectory(def/spirit)
add_subdirectory(ebeam/bison)
add_subdirectory(ebeam/spirit)
add_subdirectory(gdf/bison)
add_subdirectory(gdsii/stream)
add_subdirectory(gdsii/gdsdb)
add_subdirectory(gdsii/ascii/spirit)
add_subdirectory(lef/bison)
add_subdirectory(lef/adapt)
add_subdirectory(lef/spirit)
add_subdirectory(lp/bison)
add_subdirectory(tf/spirit)
add_subdirectory(verilog/bison)
