if(PARSER_BOOKSHELF_BISON)
  add_subdirectory(bookshelf/bison)
endif(PARSER_BOOKSHELF_BISON)
if(PARSER_DEF_BISON)
  add_subdirectory(def/bison)
endif(PARSER_DEF_BISON)
if(PARSER_DEF_ADAPT)
  add_subdirectory(def/adapt)
endif(PARSER_DEF_ADAPT)
if(PARSER_DEF_SPIRIT)
  add_subdirectory(def/spirit)
endif(PARSER_DEF_SPIRIT)
if(PARSER_EBEAM_BISON)
  add_subdirectory(ebeam/bison)
endif(PARSER_EBEAM_BISON)
if(PARSER_EBEAM_SPIRIT)
  add_subdirectory(ebeam/spirit)
endif(PARSER_EBEAM_SPIRIT)
if(PARSER_GDF_BISON)
  add_subdirectory(gdf/bison)
endif(PARSER_GDF_BISON)
if(PARSER_GDSII_STREAM)
  add_subdirectory(gdsii/stream)
  add_subdirectory(gdsii/gdsdb)
endif(PARSER_GDSII_STREAM)
if(PARSER_GDSII_ASCII)
  add_subdirectory(gdsii/ascii/spirit)
endif(PARSER_GDSII_ASCII)
if(PARSER_LEF_BISON)
  add_subdirectory(lef/bison)
endif(PARSER_LEF_BISON)
if(PARSER_LEF_ADAPT)
  add_subdirectory(lef/adapt)
endif(PARSER_LEF_ADAPT)
if(PARSER_LEF_SPIRIT)
  add_subdirectory(lef/spirit)
endif(PARSER_LEF_SPIRIT)
if(PARSER_LP_BISON)
  add_subdirectory(lp/bison)
endif(PARSER_LP_BISON)
if(PARSER_TF_SPIRIT)
  add_subdirectory(tf/spirit)
endif(PARSER_TF_SPIRIT)
if(PARSER_VERILOG_BISON)
  add_subdirectory(verilog/bison)
endif(PARSER_VERILOG_BISON)
